objects/Children__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY() -  Date_of_Birth__c )/365.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Person_Residing_with__c</fullName>
        <label>Name of Person Residing with</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Residency_Address__c</fullName>
        <label>Residency Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Children</label>
    <nameField>
        <displayFormat>Child-{00}</displayFormat>
        <label>Child ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>